# leasy

./: Cargo.toml  README.md
src/: config.rs  error.rs  lease.rs  lib.rs  manager.rs  storage.rs
src/adapters/: dynamodb.rs  mod.rs
