[package]
name = "leasy"
version = "0.1.1"
edition = "2021"
description = "Distributed lease management library"
license = "MIT"

[features]
default = []
dynamodb = ["dep:aws-sdk-dynamodb", "dep:aws-config"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tracing = "0.1"
thiserror = "2.0"
rand = "0.8"

aws-sdk-dynamodb = { version = "1.0", optional = true }
aws-config = { version = "1.0", optional = true }
