[package]
name = "leasy"
version = "0.2.0"
edition = "2021"
description = "Distributed lease management library"
license = "MIT"

[features]
default = []
dynamodb = ["dep:aws-sdk-dynamodb"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tracing = "0.1"
thiserror = "2.0"

# default-features off: TLS/http client choice belongs to the consumer (via aws-config)
aws-sdk-dynamodb = { version = "1.0", optional = true, default-features = false }
